# Wakefull

./: .gitignore  README.md  clean.sh  install.sh  meson.build  test.sh  uninstall.sh  wakefull  wakefull.c
.cache/clangd/index/: wakefull.c.72C67987B0DF38F9.idx
ArchLinux/: PKGBUILD  wakefull-1.0-1-x86_64.pkg.tar.zst  wakefull-debug-1.0-1-x86_64.pkg.tar.zst
ArchLinux/pkg/wakefull/: .BUILDINFO  .MTREE  .PKGINFO
ArchLinux/pkg/wakefull-debug/: .BUILDINFO  .MTREE  .PKGINFO
ArchLinux/pkg/wakefull-debug/usr/src/debug/wakefull/wakefull/: wakefull.c
ArchLinux/wakefull/: config  packed-refs
ArchLinux/wakefull/objects/pack/: pack-2097e2b062ff44dec8b401b0e7bc9b3b149fe1c8.idx  pack-2097e2b062ff44dec8b401b0e7bc9b3b149fe1c8.pack  pack-2097e2b062ff44dec8b401b0e7bc9b3b149fe1c8.rev  pack-713ee40ad93ef19726ba041c1ee062bcb15dd3ad.idx  pack-713ee40ad93ef19726ba041c1ee062bcb15dd3ad.pack  pack-713ee40ad93ef19726ba041c1ee062bcb15dd3ad.rev  pack-9d4e874853a70d46295d4ffcc5b31b78c6ea2368.idx  pack-9d4e874853a70d46295d4ffcc5b31b78c6ea2368.pack  pack-9d4e874853a70d46295d4ffcc5b31b78c6ea2368.rev
